--- a/index.html
+++ b/index.html
@@ -142,12 +142,13 @@
   </section>
   <section class="section slider">
     <div class="container slider__container">
+      <div class="slider__left" id="left"></div>
       <div class="slider__menu">
-        <ul class="slider__list">
+        <ul class="slider__list" id="list">
           <li class="slider__item">
             <div class="slider__burger">
               <div class="slider__burger__drop">
-                  <img src="/my_page/img/slider/grop.png" alt="">
+                  <img src="/my_page/img/slider/grop.png" class="slider__burger_img" alt="">
               </div>
               <div class="slider__burger__img">
                 <img src="/my_page/img/slider/bgslider.png" alt="Фотогрфия бургера">
@@ -172,12 +173,125 @@
               </div>
             </div>   
           </li>
+          <li class="slider__item">
+            <div class="slider__burger">
+              <div class="slider__burger__drop">
+                <img src="/my_page/img/slider/grop.png" alt="">
+              </div>
+              <div class="slider__burger__img">
+                <img src="/my_page/img/slider/burger_sandwich.png" alt="Фотогрфия бургера">
+              </div>
+              <div class="slider__burger__icon">
+                <img src="/my_page/img/slider/kkl.png" alt="">
+              </div>
+            </div>
+            <div class="slider__content">
+              <div class="title slider__title">dark beef<br>burger</div>
+              <div class="slider__desc">
+                <p class="slider__desc_text">
+                  Ваш старый добрый знакомый, с рубленым бифштексом из 100% говядины, тремя кусочками нежнейшего сыра эмменталь,
+                  двумя
+                  помидорами, луком, салатом и соусом гриль теперь с добавлением экзотического соуса чураско.
+                </p>
+              </div>
+              <div class="slider__prise">
+                <span class="slider__prise_title">500 <span class="slider__prise_subtitle">рублей</span></span>
+                <div class="header__order__btn">
+                  <a href="#" class="btn">заказать</a>
+                </div>
+              </div>
+            </div>
+          </li>
+          <li class="slider__item">
+            <div class="slider__burger">
+              <div class="slider__burger__drop">
+                <img src="/my_page/img/slider/grop.png" alt="">
+              </div>
+              <div class="slider__burger__img">
+                <img src="/my_page/img/slider/ChikenBurger.png" alt="Фотогрфия бургера">
+              </div>
+              <div class="slider__burger__icon">
+                <img src="/my_page/img/slider/kkl.png" alt="">
+              </div>
+            </div>
+            <div class="slider__content">
+              <div class="title slider__title">dark beef<br>burger</div>
+              <div class="slider__desc">
+                <p class="slider__desc_text">
+                  Ваш старый добрый знакомый, с рубленым бифштексом из 100% говядины, тремя кусочками нежнейшего сыра эмменталь,
+                  двумя
+                  помидорами, луком, салатом и соусом гриль теперь с добавлением экзотического соуса чураско.
+                </p>
+              </div>
+              <div class="slider__prise">
+                <span class="slider__prise_title">500 <span class="slider__prise_subtitle">рублей</span></span>
+                <div class="header__order__btn">
+                  <a href="#" class="btn">заказать</a>
+                </div>
+              </div>
+            </div>
+          </li>
+          <li class="slider__item">
+            <div class="slider__burger">
+              <div class="slider__burger__drop">
+                <img src="/my_page/img/slider/grop.png" alt="">
+              </div>
+              <div class="slider__burger__img">
+                <img src="/my_page/img/slider/cheeseBurger.png" alt="Фотогрфия бургера">
+              </div>
+              <div class="slider__burger__icon">
+                <img src="/my_page/img/slider/kkl.png" alt="">
+              </div>
+            </div>
+            <div class="slider__content">
+              <div class="title slider__title">dark beef<br>burger</div>
+              <div class="slider__desc">
+                <p class="slider__desc_text">
+                  Ваш старый добрый знакомый, с рубленым бифштексом из 100% говядины, тремя кусочками нежнейшего сыра эмменталь,
+                  двумя
+                  помидорами, луком, салатом и соусом гриль теперь с добавлением экзотического соуса чураско.
+                </p>
+              </div>
+              <div class="slider__prise">
+                <span class="slider__prise_title">500 <span class="slider__prise_subtitle">рублей</span></span>
+                <div class="header__order__btn">
+                  <a href="#" class="btn">заказать</a>
+                </div>
+              </div>
+            </div>
+          </li>
+          <li class="slider__item">
+            <div class="slider__burger">
+              <div class="slider__burger__drop">
+                <img src="/my_page/img/slider/grop.png" alt="">
+              </div>
+              <div class="slider__burger__img">
+                <img src="/my_page/img/slider/Spicy_Shrimp_Burger.png" alt="Фотогрфия бургера">
+              </div>
+              <div class="slider__burger__icon">
+                <img src="/my_page/img/slider/kkl.png" alt="">
+              </div>
+            </div>
+            <div class="slider__content">
+              <div class="title slider__title">dark beef<br>burger</div>
+              <div class="slider__desc">
+                <p class="slider__desc_text">
+                  Ваш старый добрый знакомый, с рубленым бифштексом из 100% говядины, тремя кусочками нежнейшего сыра эмменталь,
+                  двумя
+                  помидорами, луком, салатом и соусом гриль теперь с добавлением экзотического соуса чураско.
+                </p>
+              </div>
+              <div class="slider__prise">
+                <span class="slider__prise_title">500 <span class="slider__prise_subtitle">рублей</span></span>
+                <div class="header__order__btn">
+                  <a href="#" class="btn">заказать</a>
+                </div>
+              </div>
+            </div>
+          </li>
         </ul>
       </div>
-      <div class="slider__control">
-        <div class="slider__right"></div>
-        <div class="slider__left"></div>
-      </div>
+      <div class="slider__right" id="right"></div>
     </div>
   </section>
   <section class="section team">
