--- a/index.html
+++ b/index.html
@@ -151,10 +151,10 @@
                   <img src="/my_page/img/slider/grop.png" class="slider__burger_img" alt="">
               </div>
               <div class="slider__burger__img">
-                <img src="/my_page/img/slider/bgslider.png" alt="Фотогрфия бургера">
+                <img src="/my_page/img/slider/bgslider.png" class="slider__burger--img" alt="Фотогрфия бургера">
               </div>
               <div class="slider__burger__icon">
-                  <img src="/my_page/img/slider/kkl.png" alt="">
+                  <img src="/my_page/img/slider/kkl.png" class="slider__burger--icon" alt="">
               </div>
             </div>
             <div class="slider__content">
@@ -176,13 +176,13 @@
           <li class="slider__item">
             <div class="slider__burger">
               <div class="slider__burger__drop">
-                <img src="/my_page/img/slider/grop.png" alt="">
+                <img src="/my_page/img/slider/grop.png" class="slider__burger_img" alt="">
               </div>
               <div class="slider__burger__img">
-                <img src="/my_page/img/slider/burger_sandwich.png" alt="Фотогрфия бургера">
+                <img src="/my_page/img/slider/burger_sandwich.png" class="slider__burger--img" alt="Фотогрфия бургера">
               </div>
               <div class="slider__burger__icon">
-                <img src="/my_page/img/slider/kkl.png" alt="">
+                <img src="/my_page/img/slider/kkl.png" class="slider__burger--icon" alt="">
               </div>
             </div>
             <div class="slider__content">
@@ -205,13 +205,13 @@
           <li class="slider__item">
             <div class="slider__burger">
               <div class="slider__burger__drop">
-                <img src="/my_page/img/slider/grop.png" alt="">
+                <img src="/my_page/img/slider/grop.png" class="slider__burger_img" alt="">
               </div>
               <div class="slider__burger__img">
-                <img src="/my_page/img/slider/ChikenBurger.png" alt="Фотогрфия бургера">
+                <img src="/my_page/img/slider/ChikenBurger.png" class="slider__burger--img" alt="Фотогрфия бургера">
               </div>
               <div class="slider__burger__icon">
-                <img src="/my_page/img/slider/kkl.png" alt="">
+                <img src="/my_page/img/slider/kkl.png" class="slider__burger--icon" alt="">
               </div>
             </div>
             <div class="slider__content">
@@ -234,13 +234,13 @@
           <li class="slider__item">
             <div class="slider__burger">
               <div class="slider__burger__drop">
-                <img src="/my_page/img/slider/grop.png" alt="">
+                <img src="/my_page/img/slider/grop.png" class="slider__burger_img" alt="">
               </div>
               <div class="slider__burger__img">
-                <img src="/my_page/img/slider/cheeseBurger.png" alt="Фотогрфия бургера">
+                <img src="/my_page/img/slider/cheeseBurger.png" class="slider__burger--img" alt="Фотогрфия бургера">
               </div>
               <div class="slider__burger__icon">
-                <img src="/my_page/img/slider/kkl.png" alt="">
+                <img src="/my_page/img/slider/kkl.png" class="slider__burger--icon" alt="">
               </div>
             </div>
             <div class="slider__content">
@@ -263,13 +263,13 @@
           <li class="slider__item">
             <div class="slider__burger">
               <div class="slider__burger__drop">
-                <img src="/my_page/img/slider/grop.png" alt="">
+                <img src="/my_page/img/slider/grop.png" class="slider__burger_img" alt="">
               </div>
               <div class="slider__burger__img">
-                <img src="/my_page/img/slider/Spicy_Shrimp_Burger.png" alt="Фотогрфия бургера">
+                <img src="/my_page/img/slider/Spicy_Shrimp_Burger.png" class="slider__burger--img" alt="Фотогрфия бургера">
               </div>
               <div class="slider__burger__icon">
-                <img src="/my_page/img/slider/kkl.png" alt="">
+                <img src="/my_page/img/slider/kkl.png" class="slider__burger--icon" alt="">
               </div>
             </div>
             <div class="slider__content">
@@ -522,7 +522,7 @@
         </ul>
   </section>
   <section class="section work">
-    <div class="container work__container">
+    <!-- <div class="container work__container">
       <h2 class="title work__title">Как мы работаем</h2>
       <div class="work__video">
         <div class="work__player">
@@ -556,7 +556,7 @@
           </div>
         </div>
       </div>
-    </div>
+    </div> -->
   </section>
   <section class="section form">
     <div class="container form__container">
