--- a/index.html
+++ b/index.html
@@ -204,7 +204,65 @@
           <li class="slider__item">
             <div class="slider__burger">
               <div class="slider__burger__drop">
-                <img src="/my_page/img/slider/grop.png" class="slider__burger_img" alt="">
+                <img src="/my_page/img/slider/grop.png" class="slider__burger_img slider__burger_img--active" alt="">
+                <div class="drop"> 
+                  <ul class="drop__list">
+                    <li class="drop__item">
+                      <div class="drop__item__img">
+                        <svg width="40" height="40">
+                          <use xlink:href="./my_page/svg/sprite.svg#beff"></use>
+                        </svg>
+                      </div>
+                      <p class="drop__item__text">Говядина</p>
+                      <span class="drop__item__prise">300 г</span>
+                    </li>
+                    <li class="drop__item">
+                      <div class="drop__item__img">
+                        <svg width="40" height="40">
+                          <use xlink:href="./my_page/svg/sprite.svg#buns"></use>
+                        </svg>
+                      </div>
+                      <p class="drop__item__text">Говядина</p>
+                      <span class="drop__item__prise">300 г</span>
+                    </li>
+                    <li class="drop__item">
+                      <div class="drop__item__img">
+                        <svg width="40" height="40">
+                          <use xlink:href="./my_page/svg/sprite.svg#salad"></use>
+                        </svg>
+                      </div>
+                      <p class="drop__item__text">Говядина</p>
+                      <span class="drop__item__prise">300 г</span>
+                    </li>
+                    <li class="drop__item">
+                      <div class="drop__item__img">
+                        <svg width="40" height="40">
+                          <use xlink:href="./my_page/svg/sprite.svg#sause"></use>
+                        </svg>
+                      </div>
+                      <p class="drop__item__text">Говядина</p>
+                      <span class="drop__item__prise">300 г</span>
+                    </li>
+                    <li class="drop__item">
+                      <div class="drop__item__img">
+                        <svg width="40" height="40">
+                          <use xlink:href="./my_page/svg/sprite.svg#cucumber"></use>
+                        </svg>
+                      </div>
+                      <p class="drop__item__text">Говядина</p>
+                      <span class="drop__item__prise">300 г</span>
+                    </li>
+                    <li class="drop__item">
+                      <div class="drop__item__img">
+                        <svg width="40" height="40">
+                          <use xlink:href="./my_page/svg/sprite.svg#cheese"></use>
+                        </svg>
+                      </div>
+                      <p class="drop__item__text">Говядина</p>
+                      <span class="drop__item__prise">300 г</span>
+                    </li>
+                  </ul>
+                </div> 
               </div>
               <div class="slider__burger__img">
                 <img src="/my_page/img/slider/ChikenBurger.png" class="slider__burger--img" alt="Фотогрфия бургера">
