--- a/index.html
+++ b/index.html
@@ -148,6 +148,64 @@
             <div class="slider__burger">
               <div class="slider__burger__drop">
                   <img src="/my_page/img/slider/grop.png" class="slider__burger_img" alt="">
+                  <div class="drop drop__active">
+                    <ul class="drop__list">
+                      <li class="drop__item">
+                        <div class="drop__item__img">
+                          <svg width="40" height="40">
+                            <use xlink:href="./my_page/svg/sprite.svg#beff"></use>
+                          </svg>
+                        </div>
+                        <p class="drop__item__text">Говядина</p>
+                        <span class="drop__item__prise">300 г</span>
+                      </li>
+                      <li class="drop__item">
+                        <div class="drop__item__img">
+                          <svg width="40" height="40">
+                            <use xlink:href="./my_page/svg/sprite.svg#buns"></use>
+                          </svg>
+                        </div>
+                        <p class="drop__item__text">Булочки</p>
+                        <span class="drop__item__prise">100 г</span>
+                      </li>
+                      <li class="drop__item">
+                        <div class="drop__item__img">
+                          <svg width="40" height="40">
+                            <use xlink:href="./my_page/svg/sprite.svg#salad"></use>
+                          </svg>
+                        </div>
+                        <p class="drop__item__text">Зелень</p>
+                        <span class="drop__item__prise">70 г</span>
+                      </li>
+                      <li class="drop__item">
+                        <div class="drop__item__img">
+                          <svg width="40" height="40">
+                            <use xlink:href="./my_page/svg/sprite.svg#sause"></use>
+                          </svg>
+                        </div>
+                        <p class="drop__item__text">Соус</p>
+                        <span class="drop__item__prise">150 г</span>
+                      </li>
+                      <li class="drop__item">
+                        <div class="drop__item__img">
+                          <svg width="40" height="40">
+                            <use xlink:href="./my_page/svg/sprite.svg#cucumber"></use>
+                          </svg>
+                        </div>
+                        <p class="drop__item__text">Овощи</p>
+                        <span class="drop__item__prise">200 г</span>
+                      </li>
+                      <li class="drop__item">
+                        <div class="drop__item__img">
+                          <svg width="40" height="40">
+                            <use xlink:href="./my_page/svg/sprite.svg#cheese"></use>
+                          </svg>
+                        </div>
+                        <p class="drop__item__text">Сыр</p>
+                        <span class="drop__item__prise">80 г</span>
+                      </li>
+                    </ul>
+                  </div>
               </div>
               <div class="slider__burger__img">
                 <img src="/my_page/img/slider/bgslider.png" class="slider__burger--img" alt="Фотогрфия бургера">
@@ -176,7 +234,65 @@
             <div class="slider__burger">
               <div class="slider__burger__drop">
                 <img src="/my_page/img/slider/grop.png" class="slider__burger_img" alt="">
-              </div>
+                <div class="drop">
+                  <ul class="drop__list">
+                    <li class="drop__item">
+                      <div class="drop__item__img">
+                        <svg width="40" height="40">
+                          <use xlink:href="./my_page/svg/sprite.svg#beff"></use>
+                        </svg>
+                      </div>
+                      <p class="drop__item__text">Говядина</p>
+                      <span class="drop__item__prise">300 г</span>
+                    </li>
+                    <li class="drop__item">
+                      <div class="drop__item__img">
+                        <svg width="40" height="40">
+                          <use xlink:href="./my_page/svg/sprite.svg#buns"></use>
+                        </svg>
+                      </div>
+                      <p class="drop__item__text">Булочки</p>
+                      <span class="drop__item__prise">100 г</span>
+                    </li>
+                    <li class="drop__item">
+                      <div class="drop__item__img">
+                        <svg width="40" height="40">
+                          <use xlink:href="./my_page/svg/sprite.svg#salad"></use>
+                        </svg>
+                      </div>
+                      <p class="drop__item__text">Зелень</p>
+                      <span class="drop__item__prise">70 г</span>
+                    </li>
+                    <li class="drop__item">
+                      <div class="drop__item__img">
+                        <svg width="40" height="40">
+                          <use xlink:href="./my_page/svg/sprite.svg#sause"></use>
+                        </svg>
+                      </div>
+                      <p class="drop__item__text">Соус</p>
+                      <span class="drop__item__prise">150 г</span>
+                    </li>
+                    <li class="drop__item">
+                      <div class="drop__item__img">
+                        <svg width="40" height="40">
+                          <use xlink:href="./my_page/svg/sprite.svg#cucumber"></use>
+                        </svg>
+                      </div>
+                      <p class="drop__item__text">Овощи</p>
+                      <span class="drop__item__prise">200 г</span>
+                    </li>
+                    <li class="drop__item">
+                      <div class="drop__item__img">
+                        <svg width="40" height="40">
+                          <use xlink:href="./my_page/svg/sprite.svg#cheese"></use>
+                        </svg>
+                      </div>
+                      <p class="drop__item__text">Сыр</p>
+                      <span class="drop__item__prise">80 г</span>
+                    </li>
+                  </ul>
+                </div>
+                </div>
               <div class="slider__burger__img">
                 <img src="/my_page/img/slider/burger_sandwich.png" class="slider__burger--img" alt="Фотогрфия бургера">
               </div>
@@ -204,7 +320,7 @@
           <li class="slider__item">
             <div class="slider__burger">
               <div class="slider__burger__drop">
-                <img src="/my_page/img/slider/grop.png" class="slider__burger_img slider__burger_img--active" alt="">
+                <img src="/my_page/img/slider/grop.png" class="slider__burger_img" alt="">
                 <div class="drop"> 
                   <ul class="drop__list">
                     <li class="drop__item">
@@ -222,8 +338,8 @@
                           <use xlink:href="./my_page/svg/sprite.svg#buns"></use>
                         </svg>
                       </div>
-                      <p class="drop__item__text">Говядина</p>
-                      <span class="drop__item__prise">300 г</span>
+                      <p class="drop__item__text">Булочки</p>
+                      <span class="drop__item__prise">100 г</span>
                     </li>
                     <li class="drop__item">
                       <div class="drop__item__img">
@@ -231,8 +347,8 @@
                           <use xlink:href="./my_page/svg/sprite.svg#salad"></use>
                         </svg>
                       </div>
-                      <p class="drop__item__text">Говядина</p>
-                      <span class="drop__item__prise">300 г</span>
+                      <p class="drop__item__text">Зелень</p>
+                      <span class="drop__item__prise">70 г</span>
                     </li>
                     <li class="drop__item">
                       <div class="drop__item__img">
@@ -240,8 +356,8 @@
                           <use xlink:href="./my_page/svg/sprite.svg#sause"></use>
                         </svg>
                       </div>
-                      <p class="drop__item__text">Говядина</p>
-                      <span class="drop__item__prise">300 г</span>
+                      <p class="drop__item__text">Соус</p>
+                      <span class="drop__item__prise">150 г</span>
                     </li>
                     <li class="drop__item">
                       <div class="drop__item__img">
@@ -249,8 +365,8 @@
                           <use xlink:href="./my_page/svg/sprite.svg#cucumber"></use>
                         </svg>
                       </div>
-                      <p class="drop__item__text">Говядина</p>
-                      <span class="drop__item__prise">300 г</span>
+                      <p class="drop__item__text">Овощи</p>
+                      <span class="drop__item__prise">200 г</span>
                     </li>
                     <li class="drop__item">
                       <div class="drop__item__img">
@@ -258,8 +374,8 @@
                           <use xlink:href="./my_page/svg/sprite.svg#cheese"></use>
                         </svg>
                       </div>
-                      <p class="drop__item__text">Говядина</p>
-                      <span class="drop__item__prise">300 г</span>
+                      <p class="drop__item__text">Сыр</p>
+                      <span class="drop__item__prise">80 г</span>
                     </li>
                   </ul>
                 </div> 
@@ -292,6 +408,64 @@
             <div class="slider__burger">
               <div class="slider__burger__drop">
                 <img src="/my_page/img/slider/grop.png" class="slider__burger_img" alt="">
+                <div class="drop">
+                  <ul class="drop__list">
+                    <li class="drop__item">
+                      <div class="drop__item__img">
+                        <svg width="40" height="40">
+                          <use xlink:href="./my_page/svg/sprite.svg#beff"></use>
+                        </svg>
+                      </div>
+                      <p class="drop__item__text">Говядина</p>
+                      <span class="drop__item__prise">300 г</span>
+                    </li>
+                    <li class="drop__item">
+                      <div class="drop__item__img">
+                        <svg width="40" height="40">
+                          <use xlink:href="./my_page/svg/sprite.svg#buns"></use>
+                        </svg>
+                      </div>
+                      <p class="drop__item__text">Булочки</p>
+                      <span class="drop__item__prise">100 г</span>
+                    </li>
+                    <li class="drop__item">
+                      <div class="drop__item__img">
+                        <svg width="40" height="40">
+                          <use xlink:href="./my_page/svg/sprite.svg#salad"></use>
+                        </svg>
+                      </div>
+                      <p class="drop__item__text">Зелень</p>
+                      <span class="drop__item__prise">70 г</span>
+                    </li>
+                    <li class="drop__item">
+                      <div class="drop__item__img">
+                        <svg width="40" height="40">
+                          <use xlink:href="./my_page/svg/sprite.svg#sause"></use>
+                        </svg>
+                      </div>
+                      <p class="drop__item__text">Соус</p>
+                      <span class="drop__item__prise">150 г</span>
+                    </li>
+                    <li class="drop__item">
+                      <div class="drop__item__img">
+                        <svg width="40" height="40">
+                          <use xlink:href="./my_page/svg/sprite.svg#cucumber"></use>
+                        </svg>
+                      </div>
+                      <p class="drop__item__text">Овощи</p>
+                      <span class="drop__item__prise">200 г</span>
+                    </li>
+                    <li class="drop__item">
+                      <div class="drop__item__img">
+                        <svg width="40" height="40">
+                          <use xlink:href="./my_page/svg/sprite.svg#cheese"></use>
+                        </svg>
+                      </div>
+                      <p class="drop__item__text">Сыр</p>
+                      <span class="drop__item__prise">80 г</span>
+                    </li>
+                  </ul>
+              </div>
               </div>
               <div class="slider__burger__img">
                 <img src="/my_page/img/slider/cheeseBurger.png" class="slider__burger--img" alt="Фотогрфия бургера">
@@ -321,6 +495,64 @@
             <div class="slider__burger">
               <div class="slider__burger__drop">
                 <img src="/my_page/img/slider/grop.png" class="slider__burger_img" alt="">
+                <div class="drop">
+                  <ul class="drop__list">
+                    <li class="drop__item">
+                      <div class="drop__item__img">
+                        <svg width="40" height="40">
+                          <use xlink:href="./my_page/svg/sprite.svg#beff"></use>
+                        </svg>
+                      </div>
+                      <p class="drop__item__text">Говядина</p>
+                      <span class="drop__item__prise">300 г</span>
+                    </li>
+                    <li class="drop__item">
+                      <div class="drop__item__img">
+                        <svg width="40" height="40">
+                          <use xlink:href="./my_page/svg/sprite.svg#buns"></use>
+                        </svg>
+                      </div>
+                      <p class="drop__item__text">Булочки</p>
+                      <span class="drop__item__prise">100 г</span>
+                    </li>
+                    <li class="drop__item">
+                      <div class="drop__item__img">
+                        <svg width="40" height="40">
+                          <use xlink:href="./my_page/svg/sprite.svg#salad"></use>
+                        </svg>
+                      </div>
+                      <p class="drop__item__text">Зелень</p>
+                      <span class="drop__item__prise">70 г</span>
+                    </li>
+                    <li class="drop__item">
+                      <div class="drop__item__img">
+                        <svg width="40" height="40">
+                          <use xlink:href="./my_page/svg/sprite.svg#sause"></use>
+                        </svg>
+                      </div>
+                      <p class="drop__item__text">Соус</p>
+                      <span class="drop__item__prise">150 г</span>
+                    </li>
+                    <li class="drop__item">
+                      <div class="drop__item__img">
+                        <svg width="40" height="40">
+                          <use xlink:href="./my_page/svg/sprite.svg#cucumber"></use>
+                        </svg>
+                      </div>
+                      <p class="drop__item__text">Овощи</p>
+                      <span class="drop__item__prise">200 г</span>
+                    </li>
+                    <li class="drop__item">
+                      <div class="drop__item__img">
+                        <svg width="40" height="40">
+                          <use xlink:href="./my_page/svg/sprite.svg#cheese"></use>
+                        </svg>
+                      </div>
+                      <p class="drop__item__text">Сыр</p>
+                      <span class="drop__item__prise">80 г</span>
+                    </li>
+                  </ul>
+                </div>
               </div>
               <div class="slider__burger__img">
                 <img src="/my_page/img/slider/Spicy_Shrimp_Burger.png" class="slider__burger--img" alt="Фотогрфия бургера">
