--- a/index.html
+++ b/index.html
@@ -147,7 +147,7 @@
           <li class="slider__item">
             <div class="slider__burger">
               <div class="slider__burger__drop">
-                  <img src="/my_page/img/slider/grop.png" class="slider__burger_img" alt="">
+                  <img src="./my_page/img/slider/grop.png" class="slider__burger_img" alt="">
                   <div class="drop drop__active">
                     <ul class="drop__list">
                       <li class="drop__item">
@@ -208,10 +208,10 @@
                   </div>
               </div>
               <div class="slider__burger__img">
-                <img src="/my_page/img/slider/bgslider.png" class="slider__burger--img" alt="Фотогрфия бургера">
+                <img src="/.my_page/img/slider/bgslider.png" class="slider__burger--img" alt="Фотогрфия бургера">
               </div>
               <div class="slider__burger__icon">
-                  <img src="/my_page/img/slider/kkl.png" class="slider__burger--icon" alt="">
+                  <img src="./my_page/img/slider/kkl.png" class="slider__burger--icon" alt="">
               </div>
             </div>
             <div class="slider__content">
@@ -233,7 +233,7 @@
           <li class="slider__item">
             <div class="slider__burger">
               <div class="slider__burger__drop">
-                <img src="/my_page/img/slider/grop.png" class="slider__burger_img" alt="">
+                <img src="/.my_page/img/slider/grop.png" class="slider__burger_img" alt="">
                 <div class="drop">
                   <ul class="drop__list">
                     <li class="drop__item">
@@ -294,10 +294,10 @@
                 </div>
                 </div>
               <div class="slider__burger__img">
-                <img src="/my_page/img/slider/burger_sandwich.png" class="slider__burger--img" alt="Фотогрфия бургера">
+                <img src="./my_page/img/slider/burger_sandwich.png" class="slider__burger--img" alt="Фотогрфия бургера">
               </div>
               <div class="slider__burger__icon">
-                <img src="/my_page/img/slider/kkl.png" class="slider__burger--icon" alt="">
+                <img src="./my_page/img/slider/kkl.png" class="slider__burger--icon" alt="">
               </div>
             </div>
             <div class="slider__content">
@@ -320,7 +320,7 @@
           <li class="slider__item">
             <div class="slider__burger">
               <div class="slider__burger__drop">
-                <img src="/my_page/img/slider/grop.png" class="slider__burger_img" alt="">
+                <img src="./my_page/img/slider/grop.png" class="slider__burger_img" alt="">
                 <div class="drop"> 
                   <ul class="drop__list">
                     <li class="drop__item">
@@ -381,10 +381,10 @@
                 </div> 
               </div>
               <div class="slider__burger__img">
-                <img src="/my_page/img/slider/ChikenBurger.png" class="slider__burger--img" alt="Фотогрфия бургера">
+                <img src="./my_page/img/slider/ChikenBurger.png" class="slider__burger--img" alt="Фотогрфия бургера">
               </div>
               <div class="slider__burger__icon">
-                <img src="/my_page/img/slider/kkl.png" class="slider__burger--icon" alt="">
+                <img src="./my_page/img/slider/kkl.png" class="slider__burger--icon" alt="">
               </div>
             </div>
             <div class="slider__content">
@@ -407,7 +407,7 @@
           <li class="slider__item">
             <div class="slider__burger">
               <div class="slider__burger__drop">
-                <img src="/my_page/img/slider/grop.png" class="slider__burger_img" alt="">
+                <img src="./my_page/img/slider/grop.png" class="slider__burger_img" alt="">
                 <div class="drop">
                   <ul class="drop__list">
                     <li class="drop__item">
@@ -468,10 +468,10 @@
               </div>
               </div>
               <div class="slider__burger__img">
-                <img src="/my_page/img/slider/cheeseBurger.png" class="slider__burger--img" alt="Фотогрфия бургера">
+                <img src="./my_page/img/slider/cheeseBurger.png" class="slider__burger--img" alt="Фотогрфия бургера">
               </div>
               <div class="slider__burger__icon">
-                <img src="/my_page/img/slider/kkl.png" class="slider__burger--icon" alt="">
+                <img src="./my_page/img/slider/kkl.png" class="slider__burger--icon" alt="">
               </div>
             </div>
             <div class="slider__content">
@@ -494,7 +494,7 @@
           <li class="slider__item">
             <div class="slider__burger">
               <div class="slider__burger__drop">
-                <img src="/my_page/img/slider/grop.png" class="slider__burger_img" alt="">
+                <img src="./my_page/img/slider/grop.png" class="slider__burger_img" alt="">
                 <div class="drop">
                   <ul class="drop__list">
                     <li class="drop__item">
@@ -555,10 +555,10 @@
                 </div>
               </div>
               <div class="slider__burger__img">
-                <img src="/my_page/img/slider/Spicy_Shrimp_Burger.png" class="slider__burger--img" alt="Фотогрфия бургера">
+                <img src="./my_page/img/slider/Spicy_Shrimp_Burger.png" class="slider__burger--img" alt="Фотогрфия бургера">
               </div>
               <div class="slider__burger__icon">
-                <img src="/my_page/img/slider/kkl.png" class="slider__burger--icon" alt="">
+                <img src="./my_page/img/slider/kkl.png" class="slider__burger--icon" alt="">
               </div>
             </div>
             <div class="slider__content">
