--- a/index.html
+++ b/index.html
@@ -208,7 +208,7 @@
                   </div>
               </div>
               <div class="slider__burger__img">
-                <img src="/.my_page/img/slider/bgslider.png" class="slider__burger--img" alt="Фотогрфия бургера">
+                <img src="./my_page/img/slider/bgslider.png" class="slider__burger--img" alt="Фотогрфия бургера">
               </div>
               <div class="slider__burger__icon">
                   <img src="./my_page/img/slider/kkl.png" class="slider__burger--icon" alt="">
