--- a/index.html
+++ b/index.html
@@ -233,7 +233,7 @@
           <li class="slider__item">
             <div class="slider__burger">
               <div class="slider__burger__drop">
-                <img src="/.my_page/img/slider/grop.png" class="slider__burger_img" alt="">
+                <img src="./my_page/img/slider/grop.png" class="slider__burger_img" alt="">
                 <div class="drop">
                   <ul class="drop__list">
                     <li class="drop__item">
