--- a/index.html
+++ b/index.html
@@ -947,6 +947,10 @@
     </div>
   </section>
   <section class="section footer">
+    <div id="map">
+      <script type="text/javascript" charset="utf-8" async
+        src="https://api-maps.yandex.ru/services/constructor/1.0/js/?um=constructor%3A0fa8e991aae8f7798246361d748faa449da8c79ae53c2236366d47f7aee83dff&amp;width=&amp;height=&amp;lang=ru_RU&amp;scroll=true"></script>
+    </div>
     <div class="footer__block">
       <div class="container footer__container">
         <div class="footer__addres">
